--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,6 @@
 # SITE CONFIGURATION
 baseurl:
-url: "https://hyejin-yang.github.io"
-
+url: "https://sylhare.github.io"
 # THEME-SPECIFIC CONFIGURATION
 title: Type on Strap                                    # site's title
 description: "A website with blog posts and pages"      # used by search engines
